--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <h2 class="heading" id="intro">Introduction</h2>
   <p class="t">Marco Polo, a Venetian merchant and explorer, was born in or around 1254 in Venice, Italy, and passed away on January 8, 1324, also in Venice. He travelled from Europe to Asia between 1271 and 1295, spending 17 of those years in China, and his book Il milione ("The Million"), also known in English as the Travels of Marco Polo, is considered a classic of travel writing.
-    Polo's forebears, particularly his father Niccolò and his uncle Maffeo, paved the road for him through their pioneering endeavours. The family had engaged in extensive </p>
+    Polo's forebears, particularly his father Niccolò and his uncle Maffeo, paved the road for him through their pioneering endeavours. The family had engaged in extensive trade with the Middle East over the years, amassing enormous riches and renown. </p>
 
     <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRGHrZ7v2y5Bx1wrwBVAja1JqfEhqGporC5QfccaRvM4C_fE1vO">
   
